@@ -6,23 +6,47 @@ Phần mềm được thiết kế cho bài tập lớn môn Hệ điều hành.
 ## Tính năng chính
 
 - **Di chuyển thư mục:**  
-  - `forward -dir <subdir>`: Chuyển vào thư mục con  
-  - `backward`: Quay lại thư mục cha  
+  - `down -dir <subdir>`: Chuyển vào thư mục con  
+  - `up`: Quay lại thư mục cha  
   - `return`: Quay về thư mục gốc
 
 - **Quản lý file:**  
   - `create -csv <file>`, `-txt <file>`, `-json <file>`: Tạo file rỗng  
   - `view -csv <file>`, `-txt <file>`, `-json <file>`: Xem nội dung file  
-  - `write -csv <file>`, `-txt <file>`, `-json <file>`: Ghi đè nội dung file (hỗ trợ Unicode/Vietnamese)  
+  - `write -csv <file>`, `-txt <file>`, `-json <file>`: Ghi đè nội dung file (tạm thời chưa hỗ trợ Unicode/Vietnamese)  
   - `rename -targetname <old> -newname <new>`: Đổi tên file/thư mục  
   - `delete -targetname <file/dir>`: Xóa file hoặc thư mục rỗng
 
 - **Biên dịch và chạy chương trình:**  
+  - `build -c <src.c> -exe <out.exe>`: Biên dịch file C
   - `build -cpp <src.cpp> -exe <out.exe>`: Biên dịch file C++  
-  - `build -java <src.java>`: Biên dịch file Java  
-  - `runexe -argS <exe> [args...]`: Chạy file `.exe` với tham số  
-  - `runclass -argS <JavaClass> [args...]`: Chạy file `.class` Java với tham số  
-  - `runjar -argS <jarfile> [args...]`: Chạy file `.jar` với tham số
+  - `build -java <java_package_path>`: Biên dịch file Java 
+  - `run -argS [args...]`: Chạy file được hỗ trợ bởi máy (trong PATHEXT)
+  - `runbatch -argS [args...]`: Chạy file .bat (được hỗ trợ riêng)
+  - `runjar -optionS <java-options> -argS <jarfile> [args...]`: Chạy file `.jar` với tham số,
+  - `runclass -optionS <java-options> -argS <JavaClass> [args...]`: Chạy class Java
+
+- **Quản lý biến và đường dẫn:**  
+  - `setvar -name <var> -value <val>`: Đặt biến  
+  - `getvar -name <var>`: Lấy giá trị biến  
+  - `rmvar -name <var>`: Xóa biến  
+  - `viewvar`: Xem tất cả biến  
+  - `addpath -path <dir>`: Thêm đường dẫn  
+  - `rmpath -path <dir>`: Xóa đường dẫn  
+  - `viewpath`: Xem các đường dẫn  
+  - `adddir -dir <dir>`: Thêm thư mục  
+  - `rmdir -dir <dir>`: Xóa thư mục  
+  - `viewdir`: Xem các thư mục
+
+- **Tiện ích hệ thống:**  
+  - `sysinfo`: Thông tin hệ thống  
+  - `timeinfo`: Thông tin thời gian  
+  - `userinfo`: Thông tin người dùng  
+  - `ipinfo`: Thông tin IP  
+  - `ping -host <host>`: Ping host  
+  - `traceroute -host <host>`: Traceroute  
+  - `nslookup -host <host>`: Tra cứu DNS  
+  - `portcheck -port <port>`: Kiểm tra cổng  
 
 - **Trợ giúp:**  
   - `intro`: Giới thiệu phần mềm  
@@ -32,14 +56,8 @@ Phần mềm được thiết kế cho bài tập lớn môn Hệ điều hành.
 
 ## Hướng dẫn sử dụng
 
-1. **Biên dịch chương trình:**
-    - Yêu cầu: MSVC hoặc MinGW-w64 (g++), Java JDK đã cài đặt và có trong PATH.
-    - Biên dịch:  
-      ```
-      g++ -std=c++17 -o main.exe main.cpp
-      ```
-
 2. **Chạy chương trình:**
+    Bạn chỉ cần vào cmd, trỏ tới thư mục chính và chạy
     ```
     main.exe
     ```
@@ -51,24 +69,35 @@ Phần mềm được thiết kế cho bài tập lớn môn Hệ điều hành.
     runexe -argS matrix_generator.exe 128 256 512
     build -java MatrixMultiplication.java
     runclass -argS root.example_matmul.MatrixMultiplication matrix1.csv matrix2.csv matrix3.csv
+    runjar -optionS --enable-preview -argS chessjava.jar -bg yes
     create -txt note.txt
     write -txt note.txt
     view -txt note.txt
     rename -targetname note.txt -newname note2.txt
     delete -targetname note2.txt
+    setvar -name greeting -value "Xin chào"
+    getvar -name greeting
+    viewvar
+    addpath -path C:\MyTools
+    viewpath
+    sysinfo
+    ping -host google.com
     ```
 
 ## Lưu ý
 
 - **Unicode:** Đầu ra console và file hỗ trợ tiếng Việt (UTF-8/UTF-16). Khi ghi file, nhập `###` để kết thúc ghi.
-- **Chạy Java:** Đảm bảo classpath đúng, thường là thư mục cha của thư mục `root`.
+- **Về thư mục và file:** Đảm bảo classpath đúng, chỉ hỗ trợ chạy thư mục trong `root`, sử dụng cờ
+`-bg` và tham số `yes` để chạy tiến trình nền (background)
 - **Xóa thư mục:** Chỉ xóa được thư mục rỗng.
-- **Các lệnh và cờ phân biệt số ít/số nhiều:**  
-  - Cờ kết thúc bằng `S` nhận nhiều tham số (vd: `-argS`), còn lại chỉ nhận 1 tham số.
+- **Các lệnh và cờ phân biệt số ít/số nhiều:**
+  - Cờ kết thúc bằng `S` nhận nhiều tham số (ít nhất 1 trở lên)
+  - Các cờ còn lại chỉ nhận 1 tham số.
+- **Ctrl+C:** Khi nhấn Ctrl+C tại shell, tất cả tiến trình con sẽ bị kết thúc và shell sẽ thoát.
 
 ## Tác giả
 
-moonshineTP  
+moonshineTP
 Bài tập lớn môn Hệ điều hành
 
 ---
